temporarily fix overflow issue and duplicate header and footer across all pages

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,6 +17,8 @@
 
 html{
     scroll-behavior: smooth;
+    padding: 0; 
+    margin: 0;
 }
 
 body{
@@ -27,10 +29,7 @@ body{
     font-size: 16px;
     margin: 0;
     padding: 0;
-}
-
-.page{
-    margin: 3% auto;
+    overflow-x: hidden!important;
 }
 
 .secheading{
@@ -94,6 +93,7 @@ body{
 
 .navbar{
     width: 100vw;
+    overflow: hidden;
 }
 
 .navbar-brand{
@@ -213,8 +213,8 @@ blockquote hr{
 
 .welcome{
     text-align: center;
-    padding: 5% 10%;
-    font-size: 200%;
+    padding: 5% 5%;
+    font-size: 1em;
     width: 60%;  
     margin: 0 auto;
 }
@@ -238,6 +238,7 @@ blockquote hr{
     width: 100%;
     height: 100%;
     padding: 0;
+    margin: 0;
 }
 
 .menutab img{
@@ -312,6 +313,13 @@ blockquote hr{
     margin: 0;
     top: 0;
     left: 0;
+    
+}
+
+.catsec{
+    padding: 0;
+    margin: 0;
+    overflow: hidden;
 }
 
 .catsec img{
@@ -713,6 +721,7 @@ div.menubody.col-12{
     width: 100vw;
     clear: both;
     margin: 0%;
+    overflow: hidden;
 }
 
 .footercustom .row{
